# KIOptiPackMVDP

./: .dockerignore  .gitignore  Jenkinsfile  README.md  configure.py  pyproject.toml  requirements.txt
deployments/data1_motiv/: .env  deployment.yaml
deployments/data1_motiv/config_dir/: DataProviderService.yaml  FrontendService.yaml  ObjectStorageService.yaml
deployments/data2_raw_materials/: .env  deployment.yaml
deployments/data2_raw_materials/config_dir/: DataProviderService.yaml  FrontendService.yaml  ObjectStorageService.yaml
deployments/edc1_motiv/: .env  deployment.yaml
deployments/edc1_motiv/configs/: config-provider.properties  participants-VM.json
deployments/full/: .env  deployment.yaml
deployments/integration_test/: .env  ObjectStorageService.yaml  deployment.yaml  dev.env  docker-compose.override.yml
deployments/integration_test/baseProvider/: ContractDef.json  PolicyDef.json  assetDef.json  filetransfer.json  testNegotiation.json  testNegotiation_VM.json  testNegotiation_local.json
deployments/integration_test/config_dir/: DataProviderService.yaml  FrontendService.yaml  ObjectStorageService.yaml
deployments/integration_test/configs/: participants-local.json  participants.json
deployments/integration_test/resources/cli-tools/: entrypoint_VM.sh  entrypoint_local.sh
deployments/materials_db/: deployment.yaml
deployments/production/: .env  deployment.yaml
misc/: create_management_api_client.sh  management-api.json  management-api.yml  simple_json_upload.json  simple_upload_test.csv
misc/LocalFiles/: Command Flow.txt  ContractDef.json  JSONS.txt  PolicyDef.json  assetDef.json
requirements/: requirements.all.txt  requirements.txt  requirements.webservice.txt
src/.openapi-generator/: FILES
src/mvdp/: __init__.py  config_model.py  edc_management_client_README.md  env.py  msg.py  uvicorn_server.py
src/mvdp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mvdp/data_space_downloader/: __init__.py  data_space_downloader.py
src/mvdp/data_space_uploader/: DataSpaceUploader.py  constants.py  data_space_uploader.py
src/mvdp/edc_management_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
src/mvdp/fiot_extension/: __init__.py  cmd_create.py  services.py
src/mvdp/tools/: dataframe_formatting.py  dataprovider_functions.py
src/mvdp_classes/data_space_uploader/: DataSpaceUploader.py
src/mvdp_services/data_provider/: api_response_msg.py  data_provider_service.py  edc_tools.py  env.py  manifest.yaml  run.py
src/mvdp_services/dataframe_handler/: TableThing.py  dataframe_handler_service.py  env.py  manifest.yaml  run.py
src/mvdp_services/frontend/: FileConfiguration.py  UploadData.py  api_response_msg.py  env.py  frontend_service.py  manager.py  manifest.yaml  run.py  table_handler.py
src/mvdp_tests/: test_dataspace_downloader.py  test_edc_communication.py  test_uploader.py  test_uploading_asset.py
src/mvdp_tools/: dataframe_formatting.py
(+243 files in other folders)
