# ATTENTION: Parts of this file are managed automatically!
# This refers to build-system, project.version, tool and nuitka.

[build-system]
requires = [
    "setuptools>=67",
    "setuptools_scm[toml]>=6.2",
    "wheel",
]

[project]
name = "mvdp"
version = "0.0.91"
authors = [
    { name = "Tilman Klaeger", email = "tilman.klaeger@ivv-dd.fraunhofer.de" },
    { name = "Volodymyr Drobitko", email = "vodymyr.drobitko@ivv-dd.fraunhofer.de" },
]
description = ""
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastiot>=1,<2",
    "pandas",
    "openpyxl",
    "requests>2,<3",
]

[project.optional-dependencies]
webservice = ["fastapi",
    "python-multipart",
    "aiofiles",
    "uvicorn[standard]",
    "pymongo",
]

[tool.setuptools.packages.find]
where = [
    "src",
]
exclude = [
    "mvdp_tests*",
    "mvdp_services*",
    "mvdp.egg-info*",
]

[nuitka]
show-scons = false
nofollow-import-to = [
    "mvdp_tests*",
    "mvdp_services*",
    "mvdp.egg-info*",
]
